# port_jxr

./: CMakeLists.txt  _nord_jxr.vcxproj  _nord_jxr.vcxproj.filters  deployment.rc  jxr.vcxproj  jxr.vcxproj.filters  jxr_private.h  port_jxr.vcxproj  port_jxr.vcxproj.filters
aaa_common/: wmspecstrings_strict.h
common/: guiddef.h  wmspecstring.h
common/include/: guiddef.h  wmspecstrings_undef.h
image/decode/: JXRTranscode.c  decode.c  postprocess.c  segdec.c  strInvTransform.c  strPredQuantDec.c  strdec.c  strdec_x86.c
image/encode/: encode.c  encode.h  segenc.c  strFwdTransform.c  strPredQuantEnc.c  strenc.c  strenc_x86.c
image/sys/: adapthuff.c  image.c  strPredQuant.c  strTransform.c  strTransform.h  strcodec.c  strcodec.h
include/jxr/jxrgluelib/: JXRGlue.h  JXRMeta.h  wmspecstring.h
include/port_jxr/: uuid.h  wmspecstring.h
include/port_jxr/jxrgluelib/: JXRGlue.h  JXRMeta.h
jxrgluelib/: JXRGlue.c  JXRGlue.h  JXRGlueJxr.c  JXRGluePFC.c  JXRMeta.c  aaa_JXRGlue.h  aaa_JXRMeta.h
